# semdiff

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  renovate.json5  rustfmt.toml
.github/: dependabot.yml  ghalint.yaml
.github/scripts/: capture_vrt_data.sh
.github/workflows/: ci.yml  format.yml  lint.yml  publish.yml  sample.yml  test.yml  vrt-capture.yml  vrt-report.yml  vrt.yml
crates/semdiff/: Cargo.toml
crates/semdiff-cli/: Cargo.toml
crates/semdiff-cli/src/: main.rs
crates/semdiff-core/: Cargo.toml
crates/semdiff-core/src/: fs.rs  lib.rs  tests.rs
crates/semdiff-differ-audio/: Cargo.toml
crates/semdiff-differ-audio/src/: lib.rs  report_html.rs  report_json.rs  report_summary.rs  tests.rs
crates/semdiff-differ-audio/templates/: audio_detail.html  audio_preview.html
crates/semdiff-differ-binary/: Cargo.toml
crates/semdiff-differ-binary/src/: lib.rs  report_html.rs  report_json.rs  report_summary.rs  tests.rs
crates/semdiff-differ-binary/templates/: binary_detail.html  binary_preview.html
crates/semdiff-differ-image/: Cargo.toml
crates/semdiff-differ-image/src/: lib.rs  report_html.rs  report_json.rs  report_summary.rs  tests.rs
crates/semdiff-differ-image/templates/: image_detail.html  image_preview.html
crates/semdiff-differ-json/: Cargo.toml
crates/semdiff-differ-json/src/: json_path.rs  lib.rs  report_html.rs  report_json.rs  report_summary.rs  tests.rs
crates/semdiff-differ-json/src/json_path/: eval.rs  integer_literal.rs  number_literal.rs  parser.rs  string_literal.rs
crates/semdiff-differ-json/src/json_path/parser/: integer_literal.rs  number_literal.rs  string_literal.rs  tests.rs
crates/semdiff-differ-json/templates/: json_detail.html  json_preview.html
crates/semdiff-differ-text/: Cargo.toml
crates/semdiff-differ-text/src/: lib.rs  report_html.rs  report_json.rs  report_summary.rs  tests.rs
crates/semdiff-differ-text/templates/: text_detail.html  text_preview.html
crates/semdiff-output/: Cargo.toml
crates/semdiff-output/src/: html.rs  json.rs  lib.rs  summary.rs
crates/semdiff-output/templates/: report_detail.html  report_root.html
crates/semdiff-tree-fs/: Cargo.toml
crates/semdiff-tree-fs/src/: lib.rs
crates/semdiff/src/: main.rs
sample_data/actual/json/: added.json  modified.json  unchanged.json
sample_data/actual/text/: added.txt  modified.txt
sample_data/expected/json/: deleted.json  modified.json  unchanged.json
sample_data/expected/text/: deleted.txt  modified.txt  unchanged.txt
