[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
semdiff-core = { path = "crates/semdiff-core" }
semdiff-differ-audio = { path = "crates/semdiff-differ-audio" }
semdiff-differ-binary = { path = "crates/semdiff-differ-binary" }
semdiff-differ-image = { path = "crates/semdiff-differ-image" }
semdiff-differ-text = { path = "crates/semdiff-differ-text" }
semdiff-output = { path = "crates/semdiff-output" }
semdiff-tree-fs = { path = "crates/semdiff-tree-fs" }

askama = "0.15.1"
clap = { features = ["derive"], version = "4.5.32" }
dashmap = "6.1.0"
image = "0.25.9"
infer = "0.19.0"
memmap2 = "0.9.9"
mime = "0.3.17"
mime_guess = "2.0.5"
rustfft = "6.2.0"
serde = { features = ["derive"], version = "1.0.218" }
serde_json = "1.0.139"
similar = { features = ["bytes"], version = "2.7.0" }
symphonia = "0.5.4"
thiserror = "2.0.18"
