[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["White-Green"]
edition = "2024"
license = "Apache-2.0 OR MIT"
version = "0.1.0"

[workspace.dependencies]
semdiff-core = { path = "crates/semdiff-core" }
semdiff-differ-audio = { path = "crates/semdiff-differ-audio" }
semdiff-differ-binary = { path = "crates/semdiff-differ-binary" }
semdiff-differ-image = { path = "crates/semdiff-differ-image" }
semdiff-differ-json = { path = "crates/semdiff-differ-json" }
semdiff-differ-text = { path = "crates/semdiff-differ-text" }
semdiff-output = { path = "crates/semdiff-output" }
semdiff-tree-fs = { path = "crates/semdiff-tree-fs" }

askama = "0.15.4"
clap = { features = ["derive"], version = "4.5.56" }
color = "0.3.2"
dashmap = "6.1.0"
image = "0.25.9"
infer = "0.19.0"
memmap2 = "0.9.9"
mime = "0.3.17"
mime_guess = "2.0.5"
rayon = "1.11.0"
rustfft = "6.4.1"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
similar = { features = ["bytes"], version = "2.7.0" }
symphonia = "0.5.5"
thiserror = "2.0.18"
