[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["White-Green"]
edition = "2024"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/White-Green/semdiff"
version = "0.2.1"

[workspace.dependencies]
semdiff-core = { path = "crates/semdiff-core", version = "0.2.1" }
semdiff-differ-audio = { path = "crates/semdiff-differ-audio", version = "0.2.1" }
semdiff-differ-binary = { path = "crates/semdiff-differ-binary", version = "0.2.1" }
semdiff-differ-image = { path = "crates/semdiff-differ-image", version = "0.2.1" }
semdiff-differ-json = { path = "crates/semdiff-differ-json", version = "0.2.1" }
semdiff-differ-text = { path = "crates/semdiff-differ-text", version = "0.2.1" }
semdiff-output = { path = "crates/semdiff-output", version = "0.2.1" }

askama = { default-features = false, features = [
  "alloc",
  "derive",
], version = "0.15.4" }
clap = { default-features = false, features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
], version = "4.5.56" }
color = { default-features = false, features = ["std"], version = "0.3.2" }
dashmap = { default-features = false, version = "6.1.0" }
image = { default-features = false, features = [
  "default-formats",
], version = "0.25.9" }
infer = { default-features = false, version = "0.19.0" }
memmap2 = { default-features = false, version = "0.9.10" }
mime = { default-features = false, version = "0.3.17" }
mime_guess = { default-features = false, features = [
  "rev-mappings",
], version = "2.0.5" }
rayon = { default-features = false, version = "1.11.0" }
rustfft = { default-features = false, features = [
  "avx",
  "neon",
  "sse",
], version = "6.4.1" }
serde = { default-features = false, features = [
  "alloc",
  "derive",
], version = "1.0.228" }
serde_json = { default-features = false, features = [
  "preserve_order",
], version = "1.0.149" }
similar = { default-features = false, features = [
  "bytes",
  "text",
], version = "2.7.0" }
symphonia = { default-features = true, version = "0.5.5" }
thiserror = { default-features = false, version = "2.0.18" }
xxhash-rust = { default-features = false, features = [
  "xxh3",
], version = "0.8.15" }
