[package]
authors = { workspace = true }
description = "Command-line interface for the semdiff semantic diff tool."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[[bin]]
name = "semdiff"
path = "src/main.rs"

[dependencies]
semdiff-core = { workspace = true }
semdiff-differ-audio = { workspace = true }
semdiff-differ-binary = { workspace = true }
semdiff-differ-image = { workspace = true }
semdiff-differ-json = { workspace = true }
semdiff-differ-text = { workspace = true }
semdiff-output = { workspace = true }

clap = { workspace = true }
