[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-core"
description = "Core traversal, diff calculation, and reporting traits for semdiff."
version = { workspace = true }

[dependencies]
infer = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
