[package]
authors = { workspace = true }
description = "Core traversal, diff calculation, and reporting traits for semdiff."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-core"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
infer = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
