[package]
authors = { workspace = true }
description = "Core traversal, diff calculation, and reporting traits for semdiff."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-core"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[dependencies]
infer = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
