[package]
authors = { workspace = true }
description = "Audio diff calculator and reporters for semdiff."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-differ-audio"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }

askama = { workspace = true }
image = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
rustfft = { workspace = true }
serde = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
