[package]
edition = { workspace = true }
name = "semdiff-differ-image"
version = { workspace = true }

[dependencies]
askama = { workspace = true }
color = { workspace = true }
image = { workspace = true }
mime = { workspace = true }
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }
semdiff-tree-fs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
