[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-differ-image"
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }

askama = { workspace = true }
color = { workspace = true }
image = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
