[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-differ-image"
description = "Image diff calculator and reporters for semdiff."
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }

askama = { workspace = true }
color = { workspace = true }
image = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
