[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-differ-json"
description = "JSON diff calculator and reporters for semdiff."
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }

askama = { workspace = true }
mime = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
