[package]
edition = { workspace = true }
name = "semdiff-differ-text"
version = { workspace = true }

[dependencies]
askama = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }
semdiff-tree-fs = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
