[package]
authors = { workspace = true }
description = "Text diff calculator and reporters for semdiff."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-differ-text"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }
semdiff-output = { workspace = true }

askama = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
serde = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
