[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-output"
description = "HTML, JSON, and summary report outputs for semdiff."
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }

askama = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
