[package]
authors = { workspace = true }
description = "HTML, JSON, and summary report outputs for semdiff."
edition = { workspace = true }
license = { workspace = true }
name = "semdiff-output"
repository = { workspace = true }
version = { workspace = true }

[dependencies]
semdiff-core = { workspace = true }

askama = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
