[package]
edition = { workspace = true }
name = "semdiff-cli"
version = { workspace = true }

[[bin]]
name = "semdiff"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
semdiff-core = { workspace = true }
semdiff-differ-binary = { workspace = true }
semdiff-differ-text = { workspace = true }
semdiff-output = { workspace = true }
semdiff-tree-fs = { workspace = true }
